Support /usr/share/java/icu4j.jar for bootstrapping purposes on Fedora.

--- a/eclipse-build/dependencies.properties
+++ b/eclipse-build/dependencies.properties
@@ -1,4 +1,4 @@
-com.ibm.icu_4.4.2.v20110208.jar=/usr/lib/eclipse/plugins/com.ibm.icu_4.4.2.v20110208.jar:/usr/lib64/eclipse/plugins/com.ibm.icu_4.4.2.v20110208.jar:/usr/share/java/com.ibm.icu-4.4.jar:/usr/share/java/com.ibm.icu.jar
+com.ibm.icu_4.4.2.v20110208.jar=/usr/lib/eclipse/plugins/com.ibm.icu_4.4.2.v20110208.jar:/usr/lib64/eclipse/plugins/com.ibm.icu_4.4.2.v20110208.jar:/usr/share/java/com.ibm.icu-4.4.jar:/usr/share/java/com.ibm.icu.jar:/usr/share/java/icu4j.jar
 com.jcraft.jsch_0.1.41.v200903070017.jar=/usr/share/java/jsch.jar
 javax.servlet_2.5.0.v201103041518.jar=/usr/share/java/tomcat6-servlet-2.5-api.jar:/usr/share/java/servlet-api-2.5.jar
 javax.servlet.jsp_2.0.0.v201101211617.jar=/usr/share/java/tomcat6-jsp-2.1-api.jar:/usr/share/java/jsp-api-2.0.jar
