--- a/eclipse-build/build.properties
+++ b/eclipse-build/build.properties
@@ -1,8 +1,8 @@
 #baseLocation=${basedir}/bootstrap
 # Note:  this is also in pdebuild.properties
-buildId=I20120608-1400
-label=4.2.0-I20120608-1400
-EMFlabel=2.8.0
+buildId=M20120914-1800
+label=4.2.1-M20120914-1800
+EMFlabel=2.8.1
 testframework=org.eclipse.test_3.3.100
 p2.director.version=${testsBuildLabel}
 testsBuildId=v20100211
