--- a/eclipse-build/pdebuild.properties
+++ b/eclipse-build/pdebuild.properties
@@ -2,8 +2,8 @@ buildArch=x86
 ws=gtk
 os=linux
 
-buildId=I20120608-1400
-label=4.2.0-I20120608-1400
+buildId=M20120914-1800
+label=4.2.1-M20120914-1800
 bootclasspath=/usr/lib/jvm/java/jre/lib/rt.jar:/usr/lib/jvm/java/jre/lib/jce.jar:/usr/lib/jvm/default-java/jre/lib/rt.jar:/usr/lib/jvm/default-java/jre/lib/jce.jar:/usr/lib64/jvm/java/jre/lib/rt.jar:/usr/lib64/jvm/java/jre/lib/jce.jar
 #build.compiler=org.eclipse.jdt.core.JDTCompilerAdapter
 
