--- a/eclipse-build/build.xml
+++ b/eclipse-build/build.xml
@@ -382,7 +382,8 @@
 		<patch patchfile="${basedir}/patches/nocoreupdate.patch" dir="${buildDirectory}" strip="0" reverse="false" backups="true" />
 
 		<patch patchfile="${basedir}/patches/eclipse-buildswtnatives.patch" dir="${buildDirectory}" strip="1" backups="true"/>
-		<patch patchfile="${basedir}/patches/eclipse-addArchesAnd64bitSWT.patch" dir="${buildDirectory}" strip="1" />
+		<patch patchfile="${basedir}/patches/eclipse-addArchesAnd64bitSWT.patch" dir="${buildDirectory}" strip="1"/>
+		<patch patchfile="${basedir}/patches/eclipse-add-debug-symbols.patch"    dir="${buildDirectory}" strip="1"  backups="true"/>
 		<patch patchfile="${basedir}/patches/eclipse-add-archs-filesystem.patch" dir="${buildDirectory}" strip="1" />
 		<patch patchfile="${basedir}/patches/e4-add-archs-swt.patch" dir="${buildDirectory}" strip="2" backups="true"/>
 		<patch patchfile="${basedir}/patches/eclipse-add-archs-executable.patch" dir="${buildDirectory}" strip="1" />
@@ -430,7 +431,7 @@
 		<patch patchfile="${basedir}/patches/osgi-services-build.patch" dir="${buildDirectory}" strip="0" />
 
 		<patch patchfile="${basedir}/patches/nonRelativeLicense.patch" dir="${buildDirectory}" strip="0" />
-
+		
 		<!-- jsr14 is practically unusable with java7 -->
 		<antcall target="jsr14To15" />
 
