--- a/flatpak/sdk/pom.xml
+++ b/flatpak/sdk/pom.xml
@@ -86,6 +86,7 @@
                     <screenshot>https://git.eclipse.org/c/linuxtools/org.eclipse.linuxtools.eclipse-build.git/plain/flatpak/sdk/screenshots/screenshot-pde.png</screenshot>
                   </screenshots>
                   <branch>${releaseNumberSDK}</branch>
+                  <branchAlias>master</branchAlias>
                   <runtime>org.gnome.Platform</runtime>
                   <runtimeVersion>41</runtimeVersion>
                   <source>${project.build.directory}/products/org.eclipse.sdk.ide-linux.gtk.x86_64.tar.gz</source>
